   the R startup and it will be overridden by RStudio's debug settings.

 * startup(check = TRUE), warns if R_ENVIRON, R_ENVIRON_USER, R_PROFILE,
   R_PROFILE_USER, R_BUILD_ENVIRON, or R_CHECK_ENVIRON specifies non-existing
   files.

 * startup(debug = TRUE) now also displays the expanded path to any file or
   folder listed.  It also gives information of files that known environment
   variables (e.g. R_ENVIRON_USER) points to.

 * Added toolbox() for organizing "toolbox" environments on the search path
   where you can put your custom tools (functions and other objects). Tools
   in a toolbox are protected from what is going on in the global environment,
   e.g. they are less likely to be overwritten or removed by mistake.
   
 * Added partial() for creating tweaked version of existing functions by
   overriding one or more of the default arguments.  This is a utility
   function to be used with toolbox().

BUG FIXES:

 * startup::install() would append the startup::startup() statement to the
   last line in .Rprofile if that line (incorrectly) did not have a newline.

 * startup::startup(check = TRUE) would give "Error in if (!eof_ok(file)) { : 
   argument is of length zero" on Windows if the Rprofile file checked is
   a symbolic link.
   

Version: 0.10.0 [2018-03-26]

SIGNIFICANT CHANGES:

 * Renviron and Rprofile startup files that use <key>=<value> filters with
   non-declared keys are skipped.  Previously they were always processed.
   This update makes it easier to include "secrets", e.g. files in folder
   ~/.Renviron.d/private/SECRET=banana/ will only be included if the
   environment variable 'SECRET' is set to exactly 'banana'.  An informative
   warning, which can be disabled, will be produced by startup 0.10.* until
   startup 0.11.0 is released.

NEW FEATURES:

 * Added is_debug_on() which returns TRUE if the startup debug mode is on.
   To control the debug mode, see ?startup::startup.
